# foc-systemverilog

./: .gitignore  README.md  config.tcl  requirements.txt
docs/: control.md  hw.md
reqs/srd/: SRD001.yml  SRD002.yml  SRD003.yml
scripts/: bitstream.tcl  create_app.tcl  create_project.tcl  get_config.tcl  program_fpga.tcl
vitis/: CMakeLists.txt  README.md
vitis/old_src/: main.cpp
vitis/old_src/state/: CMakeLists.txt  state.cpp  state.hpp
vitis/old_src/terminal/: terminal.cpp  terminal.hpp
vitis/old_src/utils/: utils.cpp  utils.hpp
vitis/old_src/xilinx/: functions.cpp  functions.hpp  regs.cpp  regs.hpp
vivado/board_files/cora-z7-10/B.0/: board.xml  part0_pins.xml
vivado/src/: current_control.sv  dead_time.sv  foc.sv  freq_divider.sv  magnitude.sv  params.sv  params_types.sv  pi_controller.sv  saturation.sv  speed_control.sv  speed_detection.sv  svpwm.sv  transforms.sv  triangular_wave.sv
vivado/src/hil/: inverter.sv  motor.sv
vivado/src/svpwm/: sector_selector.sv
vivado/src/transforms/: clarke.sv  cordic_rotation.sv  inv_clarke.sv  inv_park.sv  park.sv
vivado/test/: freq_divider_tb.py  magnitude_tb.py  pi_controller_tb.py  saturation_tb.py  svpwm_tb.py  test_units.py  transforms_tb.py  triangular_wave_tb.py  utils.py
vivado/test/svpwm/: sector_selector_tb.py
vivado/test/transforms/: clarke_tb.py  inv_clarke_tb.py  inv_park_tb.py  park_tb.py
